--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npx eslint . && react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
@@ -32,5 +32,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
