--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sudoku-gen": "^1.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
