--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main
+      - master
 permissions:
   contents: write
 jobs:
@@ -15,6 +15,7 @@ jobs:
 
       - name: Install and Build
         run: |
+          npm i
           npm run build
 
       - name: Deploy 🚀
