--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sudoku",
   "version": "0.1.0",
+  "homepage": "https://squagward.github.io/sudoku",
   "private": true,
   "dependencies": {
     "@types/node": "^18.6.3",
@@ -15,7 +16,9 @@
   "scripts": {
     "start": "npx eslint . && react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
