--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm i
+          npm ci
           npm run build
 
       - name: Deploy 🚀
