Major changes: Add routes and start a basic server
Routes:
/ -> the basic functionality already present: generate boards
/sandbox -> create a board, then press save, which will store it in the "db"
/play/:id -> play the game someone created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -16,5 +16,8 @@
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": ["src", "server"],
+  "ts-node": {
+    "esm": true
+  }
 }
