--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "sudoku",
   "version": "0.1.0",
-  "homepage": "https://squagward.github.io/sudoku",
+  "homepage": "https://squagward.github.io/",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sudoku-gen": "^1.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "serve": "nodemon -e ts -w ./server -x npm run watch:serve",
+    "watch:serve": "node --loader ts-node/esm server/server.ts",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "lint": "npx eslint src",
@@ -55,12 +60,19 @@
     "useTabs": false
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
+    "express": "^4.18.1",
     "husky": "^8.0.1",
+    "nodemon": "^2.0.19",
     "prettier-eslint": "^15.0.1"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
