--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sudoku",
   "version": "0.1.0",
-  "homepage": "https://squagward.github.io/",
+  "homepage": "https://squagward.github.io/sudoku",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -70,6 +70,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
     "express": "^4.18.1",
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.1",
     "nodemon": "^2.0.19",
     "prettier-eslint": "^15.0.1"
