--- a/package.json
+++ b/package.json
@@ -1,79 +1,30 @@
 {
   "name": "sudoku",
   "version": "0.1.0",
-  "homepage": "https://squagward.github.io/sudoku",
   "private": true,
-  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "aws-sdk": "^2.1200.0",
+    "dotenv": "^16.0.1",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sudoku-gen": "^1.0.0",
-    "typescript": "^4.7.4",
+    "swr": "^1.3.0",
     "uuid": "^8.3.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "serve": "nodemon -e ts -w ./server -x npm run watch:serve",
-    "watch:serve": "node --loader ts-node/esm server/server.ts",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "lint": "npx eslint src",
-    "lint:fix": "npm run lint -- --fix",
-    "prettier": "npx prettier src --check",
-    "prettier:fix": "npm run prettier -- --write",
-    "format": "npm run prettier:fix && npm run lint:fix",
-    "prepare": "husky install"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "bracketSpacing": true,
-    "embeddedLanguageFormatting": "auto",
-    "htmlWhitespaceSensitivity": "css",
-    "proseWrap": "preserve",
-    "endOfLine": "lf",
-    "jsxSingleQuote": false,
-    "printWidth": 80,
-    "quoteProps": "as-needed",
-    "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "useTabs": false
-  },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
+    "@types/node": "18.7.9",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "axios": "^0.27.2",
-    "cors": "^2.8.5",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.30.1",
-    "express": "^4.18.1",
-    "gh-pages": "^4.0.0",
-    "husky": "^8.0.1",
-    "nodemon": "^2.0.19",
-    "prettier-eslint": "^15.0.1"
-  },
-  "proxy": "http://localhost:4000"
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "typescript": "4.7.4"
+  }
 }
