--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1200.0",
     "dotenv": "^16.0.1",
     "next": "12.2.5",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sudoku-gen": "^1.0.0",
