--- a/package.json
+++ b/package.json
@@ -9,21 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "aws-sdk": "^2.1200.0",
     "dotenv": "^16.0.1",
     "next": "12.2.5",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.3.1",
     "sudoku-gen": "^1.0.0",
-    "swr": "^1.3.0",
-    "uuid": "^8.3.2"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.7.9",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@types/uuid": "^8.3.4",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
