--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sudoku-gen": "^1.0.0",
+		"svelte-local-storage-store": "^0.3.2"
+	}
 }
