--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"ioredis": "^5.2.4",
 		"sudoku-gen": "^1.0.0",
 		"svelte-local-storage-store": "^0.3.2"
 	}
